# ML_and_AI

./: .gitignore  README.md  pyproject.toml
03_gemini/: gemini_api_intro.ipynb
04_pydantic/: pydantic_basics.ipynb  validation_without_pydantic.ipynb
05_pydantic_gemini/: gemini_pydantic_robust.ipynb
06_fastapi_crud/: api.py  data_processing.py  try_my_api.ipynb
07_b_pydantic_ai_fastapi/: agents.py  data_models.py  movies.py  setup_db.py  utils.py
07_b_pydantic_ai_fastapi/data/: movies.duckdb
07_pydantic_ai/: pydancicai_fundamentals.ipynb
08_pydanticai_chatbot/: chat.py  chat_eda.ipynb  frontend.py
09_lancedb_vector_database/: lancedb_explorations.ipynb
10_pydanticai_rags/: api.py  explorations.ipynb  ingestion.py  pdfs_to_text.py
10_pydanticai_rags/backend/: data_models.py  rag.py
10_pydanticai_rags/frontend/: app.py
10_pydanticai_rags/knowledge_base/articles.lance/_transactions/: 0-1924cdaf-668b-49d8-8f87-af8497b5e625.txn  (+12 more)
exercises/: exercise_0.ipynb  exercise_0_0.ipynb  exercise_0_1.ipynb  exercise_0_3.ipynb  exercise_0_4.ipynb  summarized_ad_1.md  summarized_ad_2.md  summarized_ad_3.md
video_alongs/03_gemini/: gemini_intro.ipynb
video_alongs/04_pydantic/: person.json  pokemon.ipynb  pydantic_basics.ipynb
video_alongs/05_pydantic_gemini/: Library.json  cheaphouses.csv  gemini_pydantic.ipynb  gemini_pydantic_robust.ipynb
video_alongs/06_fastapi_crud/: api.py  data_processing.py
video_alongs/07_pydanticai_fundamentals/: cv.duckdb  pydanticai_pydantic_model.ipynb
video_alongs/07_pydanticai_fundamentals/src/: movies_api.py  setup_db.py
(+1 files in other folders)
